<resources>
    <string name="app_name">My HSK</string>
    <string name="action_settings">Settings</string>
    <string name="text_back">返回</string>
    <string name="text_forward">提交</string>
    <string name="s_frag_register_nickname">用户昵称</string>
    <string name="s_frag_register_phone_num">手机号码</string>
    <string name="s_frag_register_password_check">确认密码</string>
    <string name="s_frag_register_protocol">同意《HZF协议》</string>
    <string name="s_frag_register_submit">完成注册</string>
    <string name="s_frag_login_register_password">密码</string>
    <string name="s_frag_login_login">登录</string>
    <string name="s_frag_login_nickname_or_phone_num">昵称/手机号码</string>
    <string name="s_activity_main_login">登录</string>
    <string name="login_zh">账号不能为空</string>
    <string name="login_password">密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="register">注册</string>
    <string name="register_get_code">验证码发送成功，请注意查收！</string>
    <string name="register_input_nickname">用户账号不能为空！</string>
    <string name="register_input_phone_num">手机号码不能为空！</string>
    <string name="register_input_password">密码不能为空！</string>
    <string name="register_input_confirm_password">请输入确认密码！</string>
    <string name="register_input_password_wrong">密码不一致！</string>
    <string name="register_input_code">请输入验证码！</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="s_url_login">http://192.168.137.1:8080/HSKHandWrting/LoginServlet</string>
    <string name="s_url_register">http://192.168.137.1:8080/HSKHandWrting/RegisterServlet</string>
    <string name="s_url_getcode">http://192.168.137.1:8080/HSKHandWrting/SendCodeServlet</string>
    <string name="s_url_change_password">http://192.168.137.1:8080/HSKHandWrting/ChangePasswordServlet</string>
    <string name="s_url_change_sex">http://192.168.137.1:8080/HSKHandWrting/ChangeSexServlet</string>
    <string name="s_url_addPlan">http://192.168.137.1:8080/HSKHandWrting/AddPlanServlet</string>
    <string name="s_url_updatePlan">http://192.168.137.1:8080/HSKHandWrting/UpdatePlanServlet</string>
    <string name="s_url_updatePhb">http://192.168.137.1:8080/HSKHandWrting/UpdatePhbServlet</string>
    <string name="s_url_getPlan">http://192.168.137.1:8080/HSKHandWrting/GetPlanServlet</string>
    <string name="s_url_getPhbsByScore">http://192.168.137.1:8080/HSKHandWrting/GetPhbsByScoreServlet</string>
    <string name="s_url_getPhb">http://192.168.137.1:8080/HSKHandWrting/GetPhbServlet</string>
    <string name="s_url_addPhb">http://192.168.137.1:8080/HSKHandWrting/AddPhbServlet</string>
    <string name="s_url_addTie">http://192.168.137.1:8080/HSKHandWrting/AddTieServlet</string>
    <string name="s_url_updateTie">http://192.168.137.1:8080/HSKHandWrting/UpdateTieServlet</string>
    <string name="s_url_getAllTie">http://192.168.137.1:8080/HSKHandWrting/GetAllTie</string>
    <string name="s_url_getMyTie">http://192.168.137.1:8080/HSKHandWrting/GetMyTieServlet</string>
    <string name="s_url_addComment">http://192.168.137.1:8080/HSKHandWrting/AddCommentServlet</string>
    <string name="s_url_getAllComment">http://192.168.137.1:8080/HSKHandWrting/GetCommentByTieIdServlet</string>
    <string name="s_url_addWord">http://192.168.137.1:8080/HSKHandWrting/AddWordServlet</string>
    <string name="s_url_addWWord">http://192.168.137.1:8080/HSKHandWrting/AddWWordServlet</string>
    <string name="s_url_getWord">http://192.168.137.1:8080/HSKHandWrting/GetWordServlet</string>
    <string name="s_url_getWWord">http://192.168.137.1:8080/HSKHandWrting/GetWWordServlet</string>
    <string name="s_url_addReplay">http://192.168.137.1:8080/HSKHandWrting/AddReplayServlet</string>
    <string name="iv_project_icon">项目图标</string>
    <string name="account">账号</string>
    <string name="plesase_input_account">请输入账号或手机号</string>
    <string name="password">密码</string>
    <string name="plesase_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_to_registe">注册</string>
    <string name="if_login_is_meaning_to_geree">登录即代表同意 </string>
    <string name="the_service"> 用户协议</string>
    <string name="third_method_login">第三方登录</string>
    <string name="iv_third_method1">第三方登录方式一</string>
    <string name="iv_third_method2">第三方登录方式二</string>
    <string name="iv_third_method3">第三方登录方式三</string>
    <string name="tv_change_password">找回密码</string>
    <string name="bt_finsh_change">完成</string>
    <string name="et_new_password">请输入新密码</string>
    <string name="et_new_password2">请再次输入密码</string>
    <string name="tv_register">用户注册</string>
    <string name="tv_phone">手机号</string>
    <string name="et_phone">请输入手机号</string>
    <string name="bt_get_code">获取验证码</string>
    <string name="tv_code">验证码</string>
    <string name="et_code">请输入验证码</string>
    <string name="tv_name">账号</string>
    <string name="et_name">请输入用户账号</string>
    <string name="tv_gender">性别</string>
    <string name="et_gender">1代表男性 2代表女性</string>
    <string name="tv_age">年龄</string>
    <string name="et_age">请输入年龄</string>
    <string name="tv_password">密码</string>
    <string name="et_password">请输入密码</string>
    <string name="et_password2">请再次输入密码</string>
    <string name="bt_register">提交注册</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="hsk1">一二十七人八九儿几了三工下大上小个么子女飞习开天五不太友车少
        日中水见午气什今月六火认书打去本东北电叫四生们他汉写出对老机再西在有师同吃吗岁回年
        先后会名多衣关米兴字那好她妈欢买块医来时里听我作你住坐饭系冷这没识现苹杯雨些果国明呢
        和的爸朋服狗京店学视话姐茶面点是星昨哪看怎很前觉客语说院起都热校样桌钱租候爱脑高站家
        请读谁能菜做猫商喜期椅喝谢想零睡影</string>
    <string name="hsk2">一二十七人八九儿几了三工下丈大上小千个么已子也女飞习开天夫元五不太友车
        比少日中水见午手牛气长什斤介从今分公月六火为认以书打正去本可左右东北号电叫四生们白他瓜乐外
        务汉它写让司出奶边对动考老地场共机过再西在有百师早同吃因吗岁回肉年先休件自向后行会名多色
        次衣问羊关米忙兴字那阴好她妈欢买红进远运找走块两医还来步时助里足男员听吧别告我每体但作你住
        身近希坐迎饭系床冷这间弟汽没快完识诉张鸡玩现表苹杯事雨妻到非些果国明呢咖知和的所爸朋服鱼狗
        备京店泳学宜试房视话妹姐姓始绍经帮茶药要面点是星昨贵思哪钟看怎便很亮送前洗觉室穿客语说孩院
        给班起都热真校样哥桌钱租笑候息爱脑高准病离站旁旅家请读课谁能球教菜票雪常眼晚啡累唱第做您得
        船猫商望着情蛋喜期椅晴最跑喝喂黑等答就道游谢想零睛睡跳路错新意歌舞漂慢题影踢颜篮</string>
    <string name="hsk3">一二十七人八九儿几了力又三于干工才下丈大万上小口山千个久么门己已子也女飞
        习马开天夫元云五不太历友车牙比少日中水见午手牛气长什片化斤介从今分公月风六文方火为认心办以
        双书末示打正去世节本可左右平东北业旧且目号电只史叫四生们白他瓜乎用乐句外冬鸟务包主市半汁头
        汉它写让礼必议记司出奶加边发对动考老扫地场耳共机过再西在有百而成师当早同吃因吗岁回刚网肉年
        先休件自向后行会爷伞朵名多色冰次衣决问羊关米灯忙兴字安讲那阳阴如好她妈戏欢买红级进远运坏找
        走护块声把报花极李求更束两医还来步时助里园足邮男员听吧别告我每体但作低你住位身近希坐邻角条
        迎饭系床应冷这忘间弟汽没快完识诉词层迟张阿附努鸡纸玩环现表担者择其苹直杯板或画事雨卖奇妻到
        非叔些果国明易典呢咖图知物刮和季使的爬所爸朋服周鱼狗备饱变京店净放刻育单法河注泳怕怪学定宜
        空试房衬衫视话该居刷妹姐姓始参练终绍经春帮城带草茶故南药查相树要面轻点是冒星昨贵界思虽响哪
        钟看怎选香种秋重复段便信很须胖急亮音闻差送前总炼洗举觉室突穿客语祝说孩除院姨结给班起都换热
        真校样根哥夏顾较桌哭啊钱铁铅特租笔笑借候健息般拿爱脑饿高准病疼离站旁旅烧酒害家宾容请读被课
        谁调通能难球理教接据黄菜萄检梯票雪辆常眼晚啡累唱啤银甜第做您得盘船脚脸猫馆康商望着清情惯敢
        蛋婚绩骑绿越超提喜期葡椅厨晴最遇跑喝喂帽黑短等答街舒然就普道渴游裤谢搬蓝楚想楼感碗零睛睡照
        跳路跟错矮简筷像腿解新意数满群静境歌愿需锻舞算鼻鲜瘦漂演慢赛熊趣聪鞋蕉题影踢箱颜懂镜篮糖糕澡</string>
    <string name="hsk4">一二十七人入八九儿几了刀力又三于干士工才下丈大与万上小口山巾千亿个久么及广
        门之己已子也女飞习马丰开天夫元无专云艺五支不太区历友尤车牙比互切止少日中内水见午手牛毛气长什
        片化币仍仅斤反介从父今分公月风六文方火为忆计户认心引办以允双书末示打巧正功扔去世节本术可左厉
        右平东卡北业旧帅且目叶申号电由只史叫另四生失代们白仔他瓜乎用印乐尔句处外冬鸟务包主市半汁头汉
        它讨写让礼必议记永司民出奶加皮边发对台母式动考老圾扩扫地场扬耳共亚机过再西压厌在有百而页达列
        死成划毕至此师光当早同吃因吸吗岁回则刚网肉年先丢传乒乓休优件任伤价份自血向后行全会合众爷伞朵
        杂危负各名多争色冰齐交次衣决问羊并关米灯汗污江汤忙兴字安讲许论农访那尽导孙阳收阴如好她妈戏羽
        观欢买红约级纪弄进远运技坏扰拒找批址走折扮护志块声把报却花严克材村极李求更束两丽医励否还来连
        步坚时助里园围呀足邮男困吵员听吧别针告我乱利秀每估体何但作低你住位身近希坐邻肚免角条迎饭饮系
        言况床应冷这序辛弃忘间判弟沙汽没怀快完究穷证评社识诉词译即层迟改张际阿附努鸡纸玩环责现表规担
        抽者抱垃拉幸招择抬其取苦苹范直林杯板松或画事雨卖码奇奋态妻软到非叔肯些虎具味果国明易典呢咖败
        购图制知物刮和季供使例货的质往爬所金命爸受肤朋肥服周鱼忽狗备饱变京店底净放刻育闹单法河泪油注
        泳泼性怕怜怪学定宜空实试房诚衬衫视话该详居刷孤降限妹姐姓始参练组细织终绍经春帮挂持城挺括拾指
        按甚带草茶故南药标查相柿树要咸研厚面耐轻点省尝是冒映星昨贵界思虽品咱响咳哪幽钟钢钥看怎选适香
        种秋科重复段便俩顺修保信律很须食胖狮急饺饼将奖亮度亲音闻差养美送前首总炼洗活染济洋洲恼举觉室
        突穿客语神祝误说既费孩除险院姨贺勇结骄给绝班起盐都换热恐获真桥格校样根哥速夏础破原逐顾较顿桌
        虑紧哭啊圆钱铁铅缺特造乘租积笔笑借值候倍健息般航拿爱脏脑逛留饿高准座病疼效离资凉站竞部旁旅阅
        羞瓶料烦烧烟酒消海流润浪悔害宽家宾窄容案请读袜被课谁调谅谈谊展剧陪通能难预验继球理堵排掉推授
        教接据职基聊著黄菜萄梦检梯桶票戚硕雪辆常匙眼晚啡距累唱啤银甜笨符第做袋偶您售停假得盘船盒悉彩
        脚脸脱象够猜猪猫馆减麻康章竟商族望着粗断清渐深情惜惊惯寄密敢弹随蛋婚绩续骑绿琴替越超提博喜握
        期联散葡植森椅棵厨硬确暂掌晴暑最量遇景跑喝喂帽黑短剩稍程等答傲傅集街舒释脾猴然就童羡普尊道湿
        温渴游愉寒富窗遍裤裙谢骗填鼓搬聘蓝禁楚想楼概感碗零输龄睛睡暖暗照跳路跟错键矮签简筷像微腿解新
        意数塑满福群静墙境慕歌酸愿需嗽赚锻舞算管鼻貌鲜疑敲膏瘦辣精歉漂漫演慢赛察熊趣趟播撞增聪鞋蕉题
        影踢箱篇躺熟颜懂整醒嘴默镜篮邀糖糕澡激懒戴擦赢燥翻警</string>
</resources>