<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.handwriting.other.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.handwriting.other.TitleLayout>
    <LinearLayout
        android:id="@+id/ll_parent_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_top_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_telephone_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/et_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:autofillHints="" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_bottom_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_middle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_otpCode_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/et_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:autofillHints="" />
                <Button
                    android:id="@+id/bt_get_otp_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/btn_red"
                    android:textColor="@color/white"
                    android:text="@string/bt_get_code" />
            </LinearLayout>


            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/et_new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:autofillHints=""  />
            <EditText
                android:id="@+id/et_new_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/et_password2"
                android:inputType="textPassword"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:autofillHints=""  />
        </LinearLayout>
        <Button
            android:id="@+id/bt_submit_password_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_stu"
            android:textColor="@color/white"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/bt_finsh_change" />
    </LinearLayout>
</LinearLayout>